# openstack-neturon-equinix-metal

./: License  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
devstack/: local.conf.sample  plugin.sh
etc/: networking_equinix.conf
networking_equinix/api_client/: equinix_api_client.py
networking_equinix/common/: exceptions.py
networking_equinix/drivers/: equinix_driver.py
networking_equinix/plugins/: equinix_l3_plugin.py  equinix_plugin.py
networking_equinix/tests/: test_equinix_api_client.py  test_equinix_plugin.py
