[metadata]
name = networking-equinix
version = 0.2
description = OpenStack Neutron plugin for Equinix Metal integration
author = codinja1188
author_email = kandimalla.vasubabu@gmail.com
license = Apache License, Version 2.0
url = https://github.com/codinja1188/networking-equinix
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openstack, neutron, equinix, metal, plugin, l3_router
classifiers =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    oslo.config
    oslo.log
    oslo.utils
    oslo.serialization
    oslo.db

[options.extras_require]
testing =
    stestr
    pytest
    tox

[entry_points]
neutron.core_plugins =
    equinix = networking_equinix.plugins.equinix_plugin:EquinixPlugin

neutron.service_plugins =
    equinix_l3_router = networking_equinix.plugins.equinix_l3_plugin:EquinixL3RouterPlugin

oslo.config.opts =
    equinix = networking_equinix.plugins.equinix_plugin:list_opts
